--- a/index.html
+++ b/index.html
@@ -77,15 +77,11 @@
     <!-- About me -->
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">Web Developer aiming to be Full-stack</p>
+        <p class="section__subtitle section__subtitle--about">Web Developer aiming to go Full-stack</p>
 
         <div class="about-me__body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
+            <p>Im a Computer Science graduate passionate about establishing future career in software development that will involve advance machine learning and neural networking . Have good commands in Java,ReactJS, SQL Server, DBMS, HTML & PHP along with Bootstrap and Javascript. </p>
+            <p>I am a very determined person. I can focus very easily without any effort which is my ultimate strength. I love to solve problems that intrigue me. Some people might call me a workaholic but the truth is I only do things that I enjoy. I love to play the guitar and listen to music whenever I get the time and I often enjoy good literature and art. </p>
         </div>
 
         <img src="img/presentation.jpg" alt="My presentation" class="about-me__img">
