About myself part 2

--- a/index.html
+++ b/index.html
@@ -80,8 +80,13 @@
         <p class="section__subtitle section__subtitle--about">Web Developer aiming to go Full-stack</p>
 
         <div class="about-me__body">
-            <p>Im a Computer Science graduate passionate about establishing future career in software development that will involve advance machine learning and neural networking . Have good commands in Java,ReactJS, SQL Server, DBMS, HTML & PHP along with Bootstrap and Javascript. </p>
-            <p>I am a very determined person. I can focus very easily without any effort which is my ultimate strength. I love to solve problems that intrigue me. Some people might call me a workaholic but the truth is I only do things that I enjoy. I love to play the guitar and listen to music whenever I get the time and I often enjoy good literature and art. </p>
+            <p>I am a Computer Science graduate passionate about establishing future career in software development that
+                will involve advance machine learning and neural networking . Have good commands in Java,ReactJS, SQL
+                Server, DBMS, HTML & PHP along with Bootstrap and Javascript. </p>
+            <p>I am a very determined person. I can focus very easily without any effort which is my ultimate strength.
+                I love to solve problems that intrigue me. Some people might call me a workaholic but the truth is I
+                only do things that I enjoy. I love to play the guitar and listen to music whenever I get the time and I
+                often enjoy good literature and art. </p>
         </div>
 
         <img src="img/presentation.jpg" alt="My presentation" class="about-me__img">
