--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 
 <body>
     <header>
-        <div class="logo">
-            <img src="img/devjane.png" alt="">
-        </div>
+
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
         </button>
@@ -113,40 +111,7 @@
                 <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
             </a>
 
-            <!-- Portfolio item 04 -->
-            <a href="portfolio-item.html" class="portfolio__item">
-                <img src="img/portfolio-04.jpg" alt="" class="portfolio__img">
-            </a>
 
-            <!-- Portfolio item 05 -->
-            <a href="portfolio-item.html" class="portfolio__item">
-                <img src="img/portfolio-05.jpg" alt="" class="portfolio__img">
-            </a>
-
-            <!-- Portfolio item 06 -->
-            <a href="portfolio-item.html" class="portfolio__item">
-                <img src="img/portfolio-06.jpg" alt="" class="portfolio__img">
-            </a>
-
-            <!-- Portfolio item 07 -->
-            <a href="portfolio-item.html" class="portfolio__item">
-                <img src="img/portfolio-07.jpg" alt="" class="portfolio__img">
-            </a>
-
-            <!-- Portfolio item 08 -->
-            <a href="#" class="portfolio__item">
-                <img src="img/portfolio-08.jpg" alt="" class="portfolio__img">
-            </a>
-
-            <!-- Portfolio item 09 -->
-            <a href="#" class="portfolio__item">
-                <img src="img/portfolio-09.jpg" alt="" class="portfolio__img">
-            </a>
-
-            <!-- Portfolio item 0 0-->
-            <a href="#" class="portfolio__item">
-                <img src="img/portfolio-10.jpg" alt="" class="portfolio__img">
-            </a>
         </div>
     </section>
 
@@ -157,22 +122,22 @@
         <a href="mailto:hamzahusmani00@gmail.com" class="footer__link">hamzahusmani00@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a class="social-list__link" href="https://codepen.io">
+                <a class="social-list__link" href="https://www.facebook.com/hamzah.usmani/">
                     <i class="fab fa-facebook"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="http://dribbble.com">
+                <a class="social-list__link" href="https://www.linkedin.com/in/abdul-momen-usmani-93a47819a">
                     <i class="fab fa-linkedin"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="https://twitter.com">
+                <a class="social-list__link" href="https://bitbucket.org/XLR82damoon/">
                     <i class="fab fa-bitbucket"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com">
+                <a class="social-list__link" href="https://github.com/USmaniHamza">
                     <i class="fab fa-github"></i>
                 </a>
             </li>
