--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -18,9 +18,7 @@
 
 <body>
     <header>
-        <div class="logo">
-            <img src="img/devjane.png" alt="">
-        </div>
+
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
         </button>
@@ -57,25 +55,25 @@
     <!-- Footer -->
     <footer class="footer">
         <!-- replace with your own email address -->
-        <a href="mailto:hello@jane.dev" class="footer__link">hello@jane.dev</a>
+        <a href="mailto:hamzahusmani00@gmail.com" class="footer__link">hamzahusmani00@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a class="social-list__link" href="https://codepen.io">
-                    <i class="fab fa-codepen"></i>
+                <a class="social-list__link" href="https://www.facebook.com/hamzah.usmani/">
+                    <i class="fab fa-facebook"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="http://dribbble.com">
-                    <i class="fab fa-dribbble"></i>
+                <a class="social-list__link" href="https://www.linkedin.com/in/abdul-momen-usmani-93a47819a">
+                    <i class="fab fa-linkedin"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="https://twitter.com">
-                    <i class="fab fa-twitter"></i>
+                <a class="social-list__link" href="https://bitbucket.org/XLR82damoon/">
+                    <i class="fab fa-bitbucket"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com">
+                <a class="social-list__link" href="https://github.com/USmaniHamza">
                     <i class="fab fa-github"></i>
                 </a>
             </li>
