--- a/index.html
+++ b/index.html
@@ -2,150 +2,186 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
-        integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>My Portfolio</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+		integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
 
-    <!-- Update these with your own fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto+Slab:400,700&display=swap" rel="stylesheet">
+	<!-- Update these with your own fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto+Slab:400,700&display=swap"
+		rel="stylesheet" />
 
-    <link rel="stylesheet" href="css/style.css">
-
+	<link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-    <header>
+	<header>
+		<button class="nav-toggle" aria-label="toggle navigation">
+			<span class="hamburger"></span>
+		</button>
+		<nav class="nav">
+			<ul class="nav__list">
+				<li class="nav__item">
+					<a href="#home" class="nav__link">Home</a>
+				</li>
+				<li class="nav__item">
+					<a href="#services" class="nav__link">My Services</a>
+				</li>
+				<li class="nav__item">
+					<a href="#about" class="nav__link">About me</a>
+				</li>
+				<li class="nav__item">
+					<a href="#work" class="nav__link">My Work</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
 
-        <button class="nav-toggle" aria-label="toggle navigation">
-            <span class="hamburger"></span>
-        </button>
-        <nav class="nav">
-            <ul class="nav__list">
-                <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
-                <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
-                <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
-            </ul>
-        </nav>
-    </header>
+	<!-- Introduction -->
+	<section class="intro" id="home">
+		<h1 class="section__title section__title--intro">
+			Hi, I am <strong>Hamza Usmani</strong>
+		</h1>
+		<p class="section__subtitle section__subtitle--intro" style="margin-top: 5px;">Web Developer</p>
+		<img src="img/Hamza.jpeg" alt="a picture of Jane Smith smiling" class="intro__img" />
+	</section>
 
-    <!-- Introduction -->
-    <section class="intro" id="home">
-        <h1 class="section__title section__title--intro">
-            Hi, I am <strong>Hamza Usmani</strong>
-        </h1>
-        <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-        <img src="img/Hamza.jpeg" alt="a picture of Jane Smith smiling" class="intro__img">
-    </section>
+	<!-- My services -->
+	<section class="my-services" id="services">
+		<h2 class="section__title section__title--services">My Skills</h2>
+		<div class="services">
+			<div class="service">
+				<h3>Design + Development</h3>
+				<p> Exploring my ways through Design and Development I have gathered suitable knowledge
+					regarding <strong> Web Accebssibility</strong> with the help of Accessibility testing tools together
+					with good <strong>UI/UX</strong> design with frameworks like <strong>ReactJS</strong> and
+					<strong>Bootstrap4</strong> .
+				</p>
+			</div>
+			<!-- / service -->
 
+			<div class="service">
+				<h3>E-Commerce</h3>
+				<p>
+					With the knowledge of building Robust E-Commerce sites with appropriate business cases, initial
+					planning and using design patterns like
+					<Strong>MVC</Strong> to make the codes organizable increase state-management parallel to techniques
+					to prevent <strong>injection attacks</strong> to add extra security .
+				</p>
+			</div>
+			<!-- / service -->
 
-    <!-- My services -->
-    <section class="my-services" id="services">
-        <h2 class="section__title section__title--services">What I do</h2>
-        <div class="services">
-            <div class="service">
-                <h3>Design + Development</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
-            </div> <!-- / service -->
+			<div class="service">
+				<h3>Database Management</h3>
+				<p>
+					My Core strength lies on back-end architecture together with server-side web application logic
+					and managing the interchange of data between the server and the users of a central database .
+				</p>
+			</div>
+			<!-- / service -->
+		</div>
+		<!-- / services -->
 
-            <div class="service">
-                <h3>E-Commerce</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
-            </div> <!-- / service -->
+		<a href="#work" class="btn">My Work</a>
+	</section>
 
-            <div class="service">
-                <h3>WordPress</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
-            </div> <!-- / service -->
-        </div> <!-- / services -->
+	<!-- About me -->
+	<section class="about-me" id="about">
+		<h2 class="section__title section__title--about">About Me</h2>
+		<p class="section__subtitle section__subtitle--about">
+			Web Developer aiming to go Full-stack
+		</p>
 
-        <a href="#work" class="btn">My Work</a>
-    </section>
+		<div class="about-me__body">
+			<p>
+				I am a Computer Science graduate passionate about establishing
+				future career in software engineering that will involve advance
+				machine learning and neural networking . Have good commands in
+				Java, Javascript, SQL Server, Web Design fundamentals(HTML5 and
+				CSS3) & PHP along with Bootstrap4 and ReactJS as frameworks.
+			</p>
+			<p>
+				I am a very determined and an ambititious person which is why I
+				adept in motivating self and others. As of my core strength I am
+				optimistic and dont let negativity discourage me from any tasks.
+				I love to solve problems that intrigue me. Some people might call
+				me a workaholic but the truth is I do things that I find both
+				challenging and knowledgeable . I tend to share problems with my
+				fellow mates and communicate as well as reach out for others to
+				work on similar problems to find better solutions . I am an
+				online gamer and listen to music whenever I get the time and I
+				often enjoy good artwork and have motorcycle fascinations.
+			</p>
+		</div>
 
+		<img src="img/presentation.jpg" alt="My presentation" class="about-me__img" />
+	</section>
 
-    <!-- About me -->
-    <section class="about-me" id="about">
-        <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">Web Developer aiming to go Full-stack</p>
+	<!-- My Work -->
+	<section class="my-work" id="work">
+		<h2 class="section__title section__title--work">My work</h2>
+		<p class="section__subtitle section__subtitle--work">
+			A selection of my range of work
+		</p>
 
-        <div class="about-me__body">
-            <p>I am a Computer Science graduate passionate about establishing future career in software development that
-                will involve advance machine learning and neural networking . Have good commands in Java,ReactJS, SQL
-                Server, DBMS, HTML & PHP along with Bootstrap and Javascript. </p>
-            <p>I am a very determined person. I can focus very easily without any effort which is my ultimate strength.
-                I love to solve problems that intrigue me. Some people might call me a workaholic but the truth is I
-                only do things that I enjoy. I love to play the guitar and listen to music whenever I get the time and I
-                often enjoy good literature and art. </p>
-        </div>
-
-        <img src="img/presentation.jpg" alt="My presentation" class="about-me__img">
-    </section>
-
-    <!-- My Work -->
-    <section class="my-work" id="work">
-        <h2 class="section__title section__title--work">My work</h2>
-        <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
-
-        <div class="portfolio">
-            <!-- Portfolio item 01 -->
-            <a href="portfolio-item.html" class="portfolio__item">
-                <img src="img/portfolio-01.jpg" alt="" class="portfolio__img">
-            </a>
-
-            <!-- Portfolio item 02 -->
-            <a href="portfolio-item.html" class="portfolio__item">
-                <img src="img/portfolio-02.jpg" alt="" class="portfolio__img">
-            </a>
-
-            <!-- Portfolio item 03 -->
-            <a href="portfolio-item.html" class="portfolio__item">
-                <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
-            </a>
-
-
-        </div>
-    </section>
+		<div class="portfolio">
+			<!-- Portfolio item 01 -->
+			<a href="portfolio-item.html" class="portfolio__item">
+				<img src="img/spiderlogo.PNG" alt="" class="portfolio__img" />
+			</a>
 
 
-    <!-- Footer -->
-    <footer class="footer">
-        <!-- replace with your own email address -->
-        <a href="mailto:hamzahusmani00@gmail.com" class="footer__link">hamzahusmani00@gmail.com</a>
-        <ul class="social-list">
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://www.facebook.com/hamzah.usmani/">
-                    <i class="fab fa-facebook"></i>
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://www.linkedin.com/in/abdul-momen-usmani-93a47819a">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://bitbucket.org/XLR82damoon/">
-                    <i class="fab fa-bitbucket"></i>
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com/USmaniHamza">
-                    <i class="fab fa-github"></i>
-                </a>
-            </li>
-        </ul>
-    </footer>
+			<!-- Portfolio item 02 -->
+			<a href="portfolio-item2.html" class="portfolio__item">
+				<img src="img/bootstrap/Mateam_Lubnan.png" alt="" class="portfolio__img" />
+			</a>
 
-    <script src="js/index.js"></script>
+			<!-- Portfolio item 03 -->
+			<a href="portfolio-item3.html" class="portfolio__item">
+				<img src="img/reactjs/logo2.PNG" alt="" class="portfolio__img" />
+			</a>
+		</div>
 
+
+	</section>
+
+	<!-- Footer -->
+	<footer class="footer">
+		<div class="footermessage">
+			<h3><strong>Let's talk</strong><br></h3>
+			<p>
+				Wanna get in touch or talk about a project? <br>
+				Feel free to contact me via email at <a href="mailto:hamzahusmani00@gmail.com" class="footer__link">
+					hamzahusmani00@gmail.com</a></p>
+		</div>
+
+		<ul class="social-list">
+			<li class="social-list__item">
+				<a class="social-list__link" href="https://www.facebook.com/hamzah.usmani/">
+					<i class="fab fa-facebook"></i>
+				</a>
+			</li>
+			<li class="social-list__item">
+				<a class="social-list__link" href="https://www.linkedin.com/in/abdul-momen-usmani-93a47819a">
+					<i class="fab fa-linkedin"></i>
+				</a>
+			</li>
+			<li class="social-list__item">
+				<a class="social-list__link" href="https://bitbucket.org/XLR82damoon/">
+					<i class="fab fa-bitbucket"></i>
+				</a>
+			</li>
+			<li class="social-list__item">
+				<a class="social-list__link" href="https://github.com/USmaniHamza">
+					<i class="fab fa-github"></i>
+				</a>
+			</li>
+		</ul>
+	</footer>
+
+	<script src="js/index.js"></script>
 </body>
 
 </html>
