--- a/portfolio-item2.html
+++ b/portfolio-item2.html
@@ -161,38 +161,38 @@
 	</div>
 
 	<!-- Footer -->
-	<footer class="footer">
-		<div class="footermessage">
-			<h3><strong>Let's talk</strong><br></h3>
-			<p>
-				Wanna get in touch or talk about a project? <br>
-				Feel free to contact me via email at <a href="mailto:hamzahusmani00@gmail.com" class="footer__link">
-					hamzahusmani00@gmail.com</a></p>
-		</div>
+    <footer class="footer">
+        <div class="footermessage">
+            <h3><strong>Let's talk</strong><br></h3>
+            <p>
+                Wanna get in touch or talk about a project? <br>
+                Feel free to contact me via email at <a href="mailto:hamzahusmani00@gmail.com" class="footer__link" target="_blank">
+                    hamzahusmani00@gmail.com</a></p>
+        </div>
 
-		<ul class="social-list">
-			<li class="social-list__item">
-				<a class="social-list__link" href="https://www.facebook.com/hamzah.usmani/">
-					<i class="fab fa-facebook"></i>
-				</a>
-			</li>
-			<li class="social-list__item">
-				<a class="social-list__link" href="https://www.linkedin.com/in/abdul-momen-usmani-93a47819a">
-					<i class="fab fa-linkedin"></i>
-				</a>
-			</li>
-			<li class="social-list__item">
-				<a class="social-list__link" href="https://bitbucket.org/XLR82damoon/">
-					<i class="fab fa-bitbucket"></i>
-				</a>
-			</li>
-			<li class="social-list__item">
-				<a class="social-list__link" href="https://github.com/USmaniHamza">
-					<i class="fab fa-github"></i>
-				</a>
-			</li>
-		</ul>
-	</footer>
+        <ul class="social-list">
+            <li class="social-list__item">
+                <a class="social-list__link" href="https://www.facebook.com/hamzah.usmani/" target="_blank">
+                    <i class="fab fa-facebook"></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link" href="https://www.linkedin.com/in/abdul-momen-usmani-93a47819a" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link" href="https://bitbucket.org/XLR82damoon/" target="_blank">
+                    <i class="fab fa-bitbucket"></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link" href="https://github.com/USmaniHamza" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
+            </li>
+        </ul>
+    </footer>
 
 	<script type="text/javascript" src="js/index.js"></script>
 </body>
