--- a/portfolio-item3.html
+++ b/portfolio-item3.html
@@ -173,33 +173,34 @@
         </div>
     </div>
 
+    <!-- Footer -->
     <footer class="footer">
         <div class="footermessage">
             <h3><strong>Let's talk</strong><br></h3>
             <p>
                 Wanna get in touch or talk about a project? <br>
-                Feel free to contact me via email at <a href="mailto:hamzahusmani00@gmail.com" class="footer__link">
+                Feel free to contact me via email at <a href="mailto:hamzahusmani00@gmail.com" class="footer__link" target="_blank">
                     hamzahusmani00@gmail.com</a></p>
         </div>
 
         <ul class="social-list">
             <li class="social-list__item">
-                <a class="social-list__link" href="https://www.facebook.com/hamzah.usmani/">
+                <a class="social-list__link" href="https://www.facebook.com/hamzah.usmani/" target="_blank">
                     <i class="fab fa-facebook"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="https://www.linkedin.com/in/abdul-momen-usmani-93a47819a">
+                <a class="social-list__link" href="https://www.linkedin.com/in/abdul-momen-usmani-93a47819a" target="_blank">
                     <i class="fab fa-linkedin"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="https://bitbucket.org/XLR82damoon/">
+                <a class="social-list__link" href="https://bitbucket.org/XLR82damoon/" target="_blank">
                     <i class="fab fa-bitbucket"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com/USmaniHamza">
+                <a class="social-list__link" href="https://github.com/USmaniHamza" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
             </li>
