--- a/index.html
+++ b/index.html
@@ -128,18 +128,18 @@
 
 		<div class="portfolio">
 			<!-- Portfolio item 01 -->
-			<a href="portfolio-item.html" class="portfolio__item">
+			<a href="portfolio-item.html" class="portfolio__item" target="_blank">
 				<img src="img/spiderlogo.PNG" alt="" class="portfolio__img" />
 			</a>
 
 
 			<!-- Portfolio item 02 -->
-			<a href="portfolio-item2.html" class="portfolio__item">
+			<a href="portfolio-item2.html" class="portfolio__item" target="_blank">
 				<img src="img/bootstrap/Mateam_Lubnan.png" alt="" class="portfolio__img" />
 			</a>
 
 			<!-- Portfolio item 03 -->
-			<a href="portfolio-item3.html" class="portfolio__item">
+			<a href="portfolio-item3.html" class="portfolio__item" target="_blank">
 				<img src="img/reactjs/logo2.PNG" alt="" class="portfolio__img" />
 			</a>
 		</div>
