--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				I am a Computer Science graduate passionate about establishing
 				future career in software engineering that will involve advance
 				machine learning and neural networking . Have good commands in
-				Java, Javascript, SQL Server, Web Design fundamentals(HTML5 and
+				Java,Vanilla Javascript, SQL Server, Web Design fundamentals(HTML5 and
 				CSS3) & PHP along with Bootstrap4 and ReactJS as frameworks.
 			</p>
 			<p>
