--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 				I am a Computer Science graduate passionate about establishing
 				future career in software engineering that will involve advance
 				machine learning and neural networking . Have good commands in
-				Java,Vanilla Javascript, SQL Server, Web Design fundamentals(HTML5 and
-				CSS3) & PHP along with Bootstrap4 and ReactJS as frameworks.
+				<strong>Java</strong>,<strong>Vanilla Javascript</strong>,<strong> SQL Server</strong>, <strong>Web Design fundamentals(HTML5 and
+				CSS3)</strong> & <strong>PHP</strong> along with <strong>Bootstrap4</strong> and <strong>ReactJS</strong> as frameworks.
 			</p>
 			<p>
 				I am a very determined and an ambititious person which is why I
