--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				future career in software engineering that will involve advance
 				machine learning and neural networking . Have good commands in
 				<strong>Java</strong>,<strong>Vanilla Javascript</strong>,<strong> SQL Server</strong>, <strong>Web Design fundamentals(HTML5 and
-				CSS3)</strong> & <strong>PHP</strong> along with <strong>Bootstrap4</strong> and <strong>ReactJS</strong> as frameworks.
+				CSS3)</strong> & <strong>Laravel</strong> and core <strong>PHP</strong> along with <strong>Bootstrap4</strong> and <strong>ReactJS</strong> as frameworks.
 			</p>
 			<p>
 				I am a very determined and an ambititious person which is why I
