--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<p>
 				I am a Computer Science graduate passionate about establishing
 				future career in software engineering that will involve advance
-				machine learning and neural networking . Have good commands in
+				machine learning and neural networking . Have good grasps in
 				<strong>Java</strong>,<strong>Vanilla Javascript</strong>,<strong> SQL Server</strong>, <strong>Web Design fundamentals(HTML5 and
 				CSS3)</strong> & <strong>Laravel</strong> and core <strong>PHP</strong> along with <strong>Bootstrap4</strong> and <strong>ReactJS</strong> as frameworks.
 			</p>
