--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<h3>Design + Development</h3>
 				<p> Exploring my ways through Design and Development I have gathered suitable knowledge
 					regarding <strong> Web Accessibility</strong> with the help of Accessibility testing tools together
-					with good <strong>UI/UX</strong> design with frameworks like <strong>ReactJS</strong> and
+					with good <strong>UI/UX</strong> design with frameworks like <strong>ReactJS</strong>,<strong>Laravel</strong> and
 					<strong>Bootstrap4</strong> .
 				</p>
 			</div>
