--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <h3><strong>Let's talk</strong><br></h3>
             <p>
                 Wanna get in touch or talk about a project? <br>
-                Feel free to contact me via email at <a href="mailto:hamzahusmani00@gmail.com" class="footer__link" target="_blank">
+                Feel free to contact me via email at <a href="mailto:abdul.momen.usmani@gmail.com" class="footer__link" target="_blank">
                     hamzahusmani00@gmail.com</a></p>
         </div>
 
